# NexTodo

./: .gitignore  CMakeLists.txt  README.md  main.cpp  nextodo.qrc
docs/: NexTodo开发设计文档.md
docs/design/: nex-todo-responsive-prototype.html  nex-todo-responsive-prototype_2.html
qml/: Main.qml
qml/components/: AddTodoDialog.qml  AppHeader.qml  CalendarPicker.qml  FilterBar.qml  SearchBox.qml  TodoCard.qml
qml/layouts/: DesktopLayout.qml
qml/pages/: TaskDetailPage.qml  TaskListPage.qml
src/: CMakeLists.txt
src/model/: TodoItem.h  TodoModel.cpp  TodoModel.h
src/storage/: TodoStorage.cpp  TodoStorage.h
